<resources>
    <string name="app_name">Lab2</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="button_set_date">Set Date</string>
    <string name="button_set_time">Set Time</string>
    <string name="button_create_notification">Create notification</string>
    <string name="button_edit_notification">Edit notification</string>
	<string name="notification_name">Title</string>
    <string name="notification_description">Description</string>
</resources>
